--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-jshint": "^1.8.4",
     "gulp-nodemon": "^1.0.4",
     "gulp-rename": "^1.2.0",
+    "gulp-requirejs": "^0.1.3",
     "gulp-sass": "^0.7.3",
     "gulp-sourcemaps": "^1.2.2",
     "gulp-uglify": "^1.0.1",
